--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </p>
       </header>
       <main>
-        <form action="" id="survey-form">
+        <form action="#" id="survey-form">
           <label id="name-label" for="name">
             Имя
             <input
@@ -115,9 +115,8 @@
               placeholder="Доп. информация"
             ></textarea>
           </label>
-          <!-- <button type="submit" id="submit">Отправить</button> -->
+          <button type="submit" id="submit">Отправить</button>
         </form>
-        <button>Отправить</button>
       </main>
     </div>
     <script src="script.js"></script>
